--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomarts
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomarts11
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=20000  # Adjust the timeout value as needed
 server.port=7777
-
 
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
